PS-11021 Fixing side-drawer-visibility

--- a/src/Pyz/Yves/ShopUi/Theme/default/styles/settings/_z-index.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/styles/settings/_z-index.scss
@@ -3,4 +3,5 @@ $setting-zi-company-menu: 10;
 $setting-zi-overlay: 700;
 $setting-zi-dropdown: 1000;
 $setting-zi-substrate: -1;
+$setting-zi-side-drawer: 1200;
 $setting-zi-header: 1100;
